# hfhackathon

./: .gitignore  .huggingface.yml  DEPLOYMENT.md  FORCE_REBUILD.txt  FORCE_SYNC_HF.txt  HF_SPACES_FIX.py  LICENSE  README.md  SYNC_TRIGGER.txt  agent.py  agent_fixed.py  app.py  config.py  main.py  memory.py  pyproject.toml  requirements.txt  space-config.json  space_deploy.py  utils.py
.space/: CONFIGURATION.json  README.md
tests/: __init__.py  requirements-test.txt  test_agent.py  test_memory.py
